--- a/src/SkiResort.Web/src/index.html
+++ b/src/SkiResort.Web/src/index.html
@@ -18,6 +18,18 @@
         <script src="js/lodash.min.js"></script>
         <script src="js/app.js"></script>
         <script src="js/app-tpl.js"></script>
+        
+        <script src="https://msdemoanalytics.azurewebsites.net/scripts/telemetry.js"></script>
+        <script>
+            MS.DemoTelemetry.sendDemoTelemetry('https://msdemoanalytics.azurewebsites.net/api/telemetry', {
+                demoName: 'AdventureWorks SkiApp',
+                tags: {
+                    Products: ['DotNetCore', 'TypeScript', 'Cordova', 'Angular', 'Ionic'],
+                    Audience: ['Developers']
+                }
+            });
+        </script>
+
     </head>
     <body ng-app="app">
         <ion-nav-view></ion-nav-view>
